macos/openim_sdk_ffi_apple.h

extern void SetConversationRecvMessageOpt(char* operationID, char* conversationID, int opt);
extern void GetTotalUnreadMsgCount(char* operationID);
extern char* GetAtAllTag(char* operationID);
extern char* CreateAdvancedTextMessage(char* operationID, char* text, char* messageEntityList);
extern char* CreateTextAtMessage(char* operationID, char* text, char* atUserList, char* atUsersInfo, char* message);
extern char* CreateTextMessage(char* operationID, char* text);
extern char* CreateLocationMessage(char* operationID, char* description, double longitude, double latitude);
extern char* CreateCustomMessage(char* operationID, char* data, char* extension, char* description);
extern char* CreateQuoteMessage(char* operationID, char* text, char* message);
extern char* CreateAdvancedQuoteMessage(char* operationID, char* text, char* message, char* messageEntityList);
extern char* CreateCardMessage(char* operationID, char* cardInfo);
extern char* CreateVideoMessageFromFullPath(char* operationID, char* videoFullPath, char* videoType, int64_t duration, char* snapshotFullPath);
extern char* CreateImageMessageFromFullPath(char* operationID, char* imageFullPath);
extern char* CreateSoundMessageFromFullPath(char* operationID, char* soundFullPath, int64_t duration);
extern char* CreateFileMessageFromFullPath(char* operationID, char* fileFullPath, char* fileName);
extern char* CreateImageMessage(char* operationID, char* imagePath);
extern char* CreateImageMessageByURL(char* operationID, char* sourcePicture, char* bigPicture, char* snapshotPicture);