lib/openim_sdk_ffi_bindings_generated.dart


  void SetConversationRecvMessageOpt(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    int opt,
  ) {
    return _SetConversationRecvMessageOpt(
      operationID,
      conversationID,
      opt,
    );
  }

  late final _SetConversationRecvMessageOptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int)>>('SetConversationRecvMessageOpt');
  late final _SetConversationRecvMessageOpt =
      _SetConversationRecvMessageOptPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  void GetTotalUnreadMsgCount(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetTotalUnreadMsgCount(
      operationID,
    );
  }

  late final _GetTotalUnreadMsgCountPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetTotalUnreadMsgCount');
  late final _GetTotalUnreadMsgCount = _GetTotalUnreadMsgCountPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> GetAtAllTag(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetAtAllTag(
      operationID,
    );
  }

  late final _GetAtAllTagPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>)>>('GetAtAllTag');
  late final _GetAtAllTag = _GetAtAllTagPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateAdvancedTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedTextMessage(
      operationID,
      text,
      messageEntityList,
    );
  }

  late final _CreateAdvancedTextMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateAdvancedTextMessage');
  late final _CreateAdvancedTextMessage =
      _CreateAdvancedTextMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateTextAtMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> atUserList,
    ffi.Pointer<ffi.Char> atUsersInfo,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateTextAtMessage(
      operationID,
      text,
      atUserList,
      atUsersInfo,
      message,
    );
  }

  late final _CreateTextAtMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateTextAtMessage');
  late final _CreateTextAtMessage = _CreateTextAtMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateTextMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _CreateTextMessage(
      operationID,
      text,
    );
  }

  late final _CreateTextMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateTextMessage');
  late final _CreateTextMessage = _CreateTextMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateLocationMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> description,
    double longitude,
    double latitude,
  ) {
    return _CreateLocationMessage(
      operationID,
      description,
      longitude,
      latitude,
    );
  }

  late final _CreateLocationMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Double,
              ffi.Double)>>('CreateLocationMessage');
  late final _CreateLocationMessage = _CreateLocationMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, double, double)>();

  ffi.Pointer<ffi.Char> CreateCustomMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> data,
    ffi.Pointer<ffi.Char> extension1,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _CreateCustomMessage(
      operationID,
      data,
      extension1,
      description,
    );
  }

  late final _CreateCustomMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateCustomMessage');
  late final _CreateCustomMessage = _CreateCustomMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _CreateQuoteMessage(
      operationID,
      text,
      message,
    );
  }

  late final _CreateQuoteMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateQuoteMessage');
  late final _CreateQuoteMessage = _CreateQuoteMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateAdvancedQuoteMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> messageEntityList,
  ) {
    return _CreateAdvancedQuoteMessage(
      operationID,
      text,
      message,
      messageEntityList,
    );
  }

  late final _CreateAdvancedQuoteMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateAdvancedQuoteMessage');
  late final _CreateAdvancedQuoteMessage =
      _CreateAdvancedQuoteMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateCardMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> cardInfo,
  ) {
    return _CreateCardMessage(
      operationID,
      cardInfo,
    );
  }

  late final _CreateCardMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateCardMessage');
  late final _CreateCardMessage = _CreateCardMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateVideoMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> videoFullPath,
    ffi.Pointer<ffi.Char> videoType,
    int duration,
    ffi.Pointer<ffi.Char> snapshotFullPath,
  ) {
    return _CreateVideoMessageFromFullPath(
      operationID,
      videoFullPath,
      videoType,
      duration,
      snapshotFullPath,
    );
  }

  late final _CreateVideoMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64,
              ffi.Pointer<ffi.Char>)>>('CreateVideoMessageFromFullPath');
  late final _CreateVideoMessageFromFullPath =
      _CreateVideoMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imageFullPath,
  ) {
    return _CreateImageMessageFromFullPath(
      operationID,
      imageFullPath,
    );
  }

  late final _CreateImageMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessageFromFullPath');
  late final _CreateImageMessageFromFullPath =
      _CreateImageMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateSoundMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> soundFullPath,
    int duration,
  ) {
    return _CreateSoundMessageFromFullPath(
      operationID,
      soundFullPath,
      duration,
    );
  }

  late final _CreateSoundMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int64)>>('CreateSoundMessageFromFullPath');
  late final _CreateSoundMessageFromFullPath =
      _CreateSoundMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<ffi.Char> CreateFileMessageFromFullPath(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> fileFullPath,
    ffi.Pointer<ffi.Char> fileName,
  ) {
    return _CreateFileMessageFromFullPath(
      operationID,
      fileFullPath,
      fileName,
    );
  }

  late final _CreateFileMessageFromFullPathPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateFileMessageFromFullPath');
  late final _CreateFileMessageFromFullPath =
      _CreateFileMessageFromFullPathPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> imagePath,
  ) {
    return _CreateImageMessage(
      operationID,
      imagePath,
    );
  }

  late final _CreateImageMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateImageMessage');
  late final _CreateImageMessage = _CreateImageMessagePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> CreateImageMessageByURL(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> sourcePicture,
    ffi.Pointer<ffi.Char> bigPicture,
    ffi.Pointer<ffi.Char> snapshotPicture,
  ) {
    return _CreateImageMessageByURL(
      operationID,
      sourcePicture,
      bigPicture,
      snapshotPicture,
    );
  }
